# EARRINGS

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
benchmark/: benchmark_adapter.py  benchmark_mem_usage.py  benchmark_performance.py  benchmark_performance_low_complexity.py  benchmark_real_data.py  benchmark_speed.py  build_earrings_idx.py  build_index.py  clean.sh  path.py  prog_out.py  run_trimmers.py
cmake/: Config.cmake.in  HunterGate.cmake  bundle.cmake.in  c_cpp_properties.json.in  compiler.cmake  cpack.cmake  dependencies.cmake  ide.cmake  install.cmake  options.cmake  packages.cmake  src.cmake  unit_test.cmake  version.cmake
cmake/screw/: CMakeLists.txt
cmake/screw/screw/: add_qt_find_mods_dir.cmake  core.cmake  hunter_root.cmake
cmake/screw/screw/add_qt_find_mods_dir/: get_qt_win_toolset.cmake  versions.cmake  win.cmake
cmake/screw/screw/modules/: FindVimbaSDK.cmake
cmake/screw/screw/utils/: add_executable.cmake  add_library.cmake  add_targets_in.cmake  add_version.cmake  cmake_package_config_initial.cmake  compiler_option.cmake  extend_template.cmake  get_bits.cmake  get_msvc_name.cmake  get_rel_subdirs.cmake  get_win_disk_label.cmake  message.cmake  path_to_target_name.cmake  set_debugger.cmake  show_var.cmake
cmake/screw/screw/utils/add_version/: version.h.in
cmake/screw/screw/utils/vscode/: generate_c_cpp_properties.cmake
cmake/screw/screw/utils/vscode/launch/: add_launch_task.cmake  generate_launch.cmake  launch.json.in  task_gdb.in
cmake/screw/src/: Config.cmake.in
src/: EARRINGS.cpp
test_data/: has_adapter_1.fq  (+6 more)
(+254 files in other folders)
